# ashish_billmunshi

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
apps/api/: middleware.py  permissions.py  schema.py  schema_extensions.py  serializers.py  urls.py  views.py
apps/subscriptions/: admin.py  analytics.py  apps.py  models.py  payment_gateways.py  pdf_generator.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py  webhook_handlers.py
apps/subscriptions/management/commands/: process_billing.py  setup_default_data.py
apps/subscriptions/migrations/: 0001_initial.py  0002_initial.py
apps/teams/: adapter.py  admin.py  middleware.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/teams/migrations/: 0001_initial.py  0002_initial.py
apps/users/: adapter.py  admin.py  apps.py  middleware.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py
apps/utils/: exceptions.py  health.py  performance.py  security.py
billmunshi/: admin.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/admin/: dashboard.html
templates/emails/: email_verification.html  email_verification.txt   password_reset.html  password_reset.txt
templates/subscriptions/emails/: payment_success.html  subscription_welcome.html  subscription_welcome.txt  usage_alert.html  usage_alert.txt
templates/subscriptions/pdf/: invoice.html
templates/teams/emails/: invitation.html  invitation.txt  security_alert_password_change.html  security_alert_password_change.txt  welcome.html  welcome.txt  welcome_complete_profile.txt
templates/users/emails/: security_alert_new_device.html  security_alert_new_device.txt  welcome_complete_profile.html
